# serializer version: 1
# name: test_sensor_platfom[sensor.192_168_69_16_characters_total-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.TOTAL: 'total'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.192_168_69_16_characters_total',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Characters total',
    'platform': 'paperless_ngx',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'characters_count',
    'unique_id': 'paperless_ngx_test_characters_count',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensor_platfom[sensor.192_168_69_16_characters_total-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': '192.168.69.16 Characters total',
      'state_class': <SensorStateClass.TOTAL: 'total'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.192_168_69_16_characters_total',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '99999',
  })
# ---
# name: test_sensor_platfom[sensor.192_168_69_16_correspondents_total-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.TOTAL: 'total'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.192_168_69_16_correspondents_total',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Correspondents total',
    'platform': 'paperless_ngx',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'correspondent_count',
    'unique_id': 'paperless_ngx_test_correspondent_count',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensor_platfom[sensor.192_168_69_16_correspondents_total-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': '192.168.69.16 Correspondents total',
      'state_class': <SensorStateClass.TOTAL: 'total'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.192_168_69_16_correspondents_total',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '99',
  })
# ---
# name: test_sensor_platfom[sensor.192_168_69_16_document_types_total-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.TOTAL: 'total'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.192_168_69_16_document_types_total',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Document types total',
    'platform': 'paperless_ngx',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'document_type_count',
    'unique_id': 'paperless_ngx_test_document_type_count',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensor_platfom[sensor.192_168_69_16_document_types_total-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': '192.168.69.16 Document types total',
      'state_class': <SensorStateClass.TOTAL: 'total'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.192_168_69_16_document_types_total',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '99',
  })
# ---
# name: test_sensor_platfom[sensor.192_168_69_16_documents_inbox-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.TOTAL: 'total'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.192_168_69_16_documents_inbox',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Documents inbox',
    'platform': 'paperless_ngx',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'documents_inbox',
    'unique_id': 'paperless_ngx_test_documents_inbox',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensor_platfom[sensor.192_168_69_16_documents_inbox-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': '192.168.69.16 Documents inbox',
      'state_class': <SensorStateClass.TOTAL: 'total'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.192_168_69_16_documents_inbox',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '9',
  })
# ---
# name: test_sensor_platfom[sensor.192_168_69_16_documents_total-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.TOTAL: 'total'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.192_168_69_16_documents_total',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Documents total',
    'platform': 'paperless_ngx',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'documents_total',
    'unique_id': 'paperless_ngx_test_documents_total',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensor_platfom[sensor.192_168_69_16_documents_total-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': '192.168.69.16 Documents total',
      'state_class': <SensorStateClass.TOTAL: 'total'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.192_168_69_16_documents_total',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '999',
  })
# ---
# name: test_sensor_platfom[sensor.192_168_69_16_tags_total-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.TOTAL: 'total'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.192_168_69_16_tags_total',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Tags total',
    'platform': 'paperless_ngx',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'tag_count',
    'unique_id': 'paperless_ngx_test_tag_count',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensor_platfom[sensor.192_168_69_16_tags_total-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': '192.168.69.16 Tags total',
      'state_class': <SensorStateClass.TOTAL: 'total'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.192_168_69_16_tags_total',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '99',
  })
# ---
